<resources>
    <string name="app_name">SI7 APP</string>
    <string name="txt_img_logo">LOGO-SI</string>
    <string name="txt_main_screen">SI7 APP 2019</string>
    <string name="txt_form_cadastro">Formulário de Cadastro</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="hint_email">Digite seu Email</string>
    <string name="hint_telefone">Digite seu Telefone</string>
    <string name="txt_btnCadastrar">CADASTRAR</string>
    <string name="txt_title">Confirmar Cadastro</string>
    <string name="txt_conf_btnVoltar">VOLTAR</string>
</resources>
